<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Math Balls</string>

    <string name="menu_opt_pref">Settings</string>
    <string name="menu_opt_about">About</string>
    <string name="menu_opt_rate">Rate Math Balls</string>

    <string name="about_title">About</string>
    <string name="about_howtoplay_title">How to play</string>
    <string name="about_howtoplay_text">In Math Balls, the goal is to combine numbered balls to reach a target sum. All balls must be pressed down at the same time. Any number of balls can be combined.\n\nIf the red line at the top goes down, the game is over. It is reset each time the current target sum is reached.\n\nThe blue line at the top marks the way towards the next level. Each level will make the game harder.\n\nThere are three difficulty levels that can be set in the menu.</string>
    <string name="about_scoring_title">Scoring</string>
    <string name="about_scoring_text">Scoring points in Math Balls is based on the color of the balls and the number of balls combined to the target sum. Blue balls are worth most, then red balls and green balls are worth the least. The more balls that are combined at once, the higher score you get. It is often better to combine many green and red balls, compared to a few blue ones.</string>
    <string name="about_credits_title">Credits</string>
    <string name="about_credits_text">All design, graphics and programming by Tomas Skäre.\n\nSounds are attribution free samples from freesounds.org.</string>
    <string name="about_button_ok">OK</string>

    <string name="menu_resume">Resume game</string>
    <string name="menu_start_new">Start new game</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_leaderboards">High scores</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rate">Rate Math Balls</string>
    <string name="menu_gametype_label">Difficulty:</string>

    <string name="gms_alert_achievements">Please sign in to view achievements.</string>
    <string name="gms_alert_leaderboards">Please sign in to view highscores.</string>

    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again in settings.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Please report this to the developer.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>

    <string name="game_target_sum">Target sum:</string>
    <string name="game_score">Score:</string>

    <string name="gameover_title">Game over</string>
    <string name="gameover_button_share">Share</string>
    <string name="gameover_button_highscores">High scores</string>
    <string name="gameover_button_newgame">New game</string>
    <string name="gameover_score_title">Score</string>
    <string name="gameover_level_title">Level</string>
    <string name="gameover_removed_title">Balls removed</string>
    <string name="gameover_highscore_title">High score</string>

    <string name="share_title">Share your score</string>
    <string name="share_subject">My Math Balls score</string>
    <string name="share_text">I just scored %1$s points in Math Balls %2$s mode. Do you think you can beat it? Try yourself at http://bit.ly/mathballs #MathBalls</string>

    <string name="confirmnew_title">Are you sure?</string>
    <string name="confirmnew_message">The previous game will be erased when starting a new game.</string>
    <string name="confirmnew_cancel">Cancel</string>
    <string name="confirmnew_ok">OK</string>

    <string name="pause_title">Game paused</string>
    <string name="pause_resume">Resume</string>
    <string name="pause_exit">Exit</string>

    <string name="pref_cat_settings">Game settings</string>
    <string name="pref_sound_enable_title">Enable sound</string>
    <string name="pref_sound_enable_summary_on">Sounds will be played</string>
    <string name="pref_sound_enable_summary_off">Sounds will not be played</string>
    <string name="pref_vibrate_enable_title">Enable vibration</string>
    <string name="pref_vibrate_enable_summary_on">Vibration will be used</string>
    <string name="pref_vibrate_enable_summary_off">Vibration will not be used</string>
    <string name="pref_fullscreen_enable_title">Enable fullscreen where available</string>
    <string name="pref_fullscreen_enable_summary_on">Fullscreen mode will be used if available</string>
    <string name="pref_fullscreen_enable_summary_off">Fullscreen mode will not be used</string>
    <string name="pref_cat_gpgs">Google Play Games Services</string>
    <string name="pref_gpgs_enable_title">Enable Google Play Games Services</string>
    <string name="pref_gpgs_enable_summary_on">Will try to sign in with Google</string>
    <string name="pref_gpgs_enable_summary_off">Will not sign in with Google</string>
    <string name="pref_gpgs_signin_title">Sign in with Google</string>
    <string name="pref_gpgs_signin_summary_enabled_signedin">You are currently signed in as %1$s</string>
    <string name="pref_gpgs_signin_summary_enabled_signedout">You are currently not signed in</string>
    <string name="pref_gpgs_signin_summary_disabled">Enable Google Play Services to sign in</string>
    <string name="pref_gpgs_settings_title">Google settings</string>
    <string name="pref_gpgs_settings_summary_enabled_signedin">Manage your Google Play Services settings</string>
    <string name="pref_gpgs_settings_summary_enabled_signedout">Sign in to manager your Google Play Services settings</string>
    <string name="pref_gpgs_settings_summary_disabled">Enable Google Play Services to manage settings</string>
</resources>
