<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

    <TextView
	style="?android:attr/listSeparatorTextViewStyle"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:textColor="@android:color/secondary_text_light"
	android:text="@string/about_howtoplay_title"/>

    <TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingLeft="15dp"
	android:paddingRight="15dp"
	android:paddingBottom="15dp"
	android:text="@string/about_howtoplay_text"
	android:textColor="@android:color/primary_text_light"
	android:textSize="18sp"/>

    <TextView
	style="?android:attr/listSeparatorTextViewStyle"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:textColor="@android:color/secondary_text_light"
	android:text="@string/about_scoring_title"/>

    <TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingLeft="15dp"
	android:paddingRight="15dp"
	android:paddingBottom="15dp"
	android:text="@string/about_scoring_text"
	android:textColor="@android:color/primary_text_light"
	android:textSize="18sp"/>

    <TextView
	style="?android:attr/listSeparatorTextViewStyle"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:textColor="@android:color/secondary_text_light"
	android:text="@string/about_credits_title"/>

    <TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingLeft="15dp"
	android:paddingRight="15dp"
	android:paddingBottom="15dp"
	android:text="@string/about_credits_text"
	android:textColor="@android:color/primary_text_light"
	android:textSize="18sp"/>

  </LinearLayout>

</ScrollView>
